Mobile version and fix bugs

--- a/style.css
+++ b/style.css
@@ -53,13 +53,16 @@ header .btn:hover {
 /* first section */
 .premium {
     width: 100%;
-    max-width: 1170px;
     height: 450px;
     margin: 0 auto;
     display: flex;
-    align-items: center;
     flex-direction: column;
     flex-wrap: wrap;
+    justify-content: center;
+    background: url(./img/hero.png) no-repeat;
+    background-position: 950px 0px;
+    background-size: 700px;
+    align-content: flex-start;
     justify-content: center;
 }
 
@@ -70,7 +73,7 @@ h1 {
 }
 
 h2 {
-    font-size: 30px;
+    font-size: 35px;
     font-weight: bold;
 }
 
@@ -81,12 +84,13 @@ h3 {
 
 .premium_desc {
     color: #ef5466;
+    padding-top: 20px;
 }
 
-.premium_titre, .premium_desc {
-    width: 50%;
+/* .premium_titre, .premium_desc {
+    width: 40%;
     text-align: left;
-}
+} */
 
 .premium img {
     width: 54%;
@@ -113,10 +117,8 @@ h3 {
     transition: .3s;
 }
 
-.premium span {
-    display: flex;
-    flex-direction: row;
-    width: 40%;
+.prem_block {
+    padding-left: 450px;
 }
 
 /* second section */
@@ -146,7 +148,7 @@ h3 {
 
 .container h2 {
     position: absolute;
-    margin-left: -290px;
+    margin-left: -250px;
 }
 
 .phone_text {
@@ -293,6 +295,13 @@ h3 {
     color: #8e8e94;
     padding-bottom: 10px;
 } 
+
+.rec {
+    display: none;
+    text-transform: uppercase;
+    color: #8e8e94;
+    padding-bottom: 10px;
+}
 
 .tarif_info {
     padding-top: 40px;
@@ -464,4 +473,244 @@ select {
     padding: 4px;
     margin-left: 5px;
     outline: none;
+}
+
+
+/* mobile version */
+
+
+
+@media (max-width: 1050px) {
+    .premium {
+        align-content: center;
+        justify-content: flex-start;
+        height: 670px;
+        background-position: 170px 355px;
+    }
+    .prem_block {
+        padding-left: 0px;
+        padding-top: 30px;
+        display: flex;
+        flex-direction: column;
+    }
+
+    .premium_desc {
+        margin-bottom: 25px;
+    }
+
+    .btn_red {
+        margin-top: -10px;
+    }
+
+    .container h2 {
+        margin-left: -150px;
+    }
+    .phone_text {
+        padding-top: 20px;
+    }
+}
+
+@media (max-width: 896px) {
+    .nav {
+        display: none;
+    }
+
+    .logo {
+        width: 250px;
+    }
+
+    header {
+        background: url(./img/burger.png) no-repeat;
+        background-position: right;
+        justify-content: center;
+        }
+
+    .premium img {
+        display: none;
+    }
+
+    .premium {
+        max-width: 100%;
+        flex-wrap: nowrap;
+        height: 900px;
+        padding-top: 50px;
+        background: url(./img/hero.png) no-repeat;
+        background-position: 0px 540px;
+        background-size: 1093px;
+        justify-content: flex-start;
+    }
+
+    .premium_titre, .premium_desc {
+        width: 100%;
+        text-align: center;
+        font-size: 70px;
+    }
+
+    .btn_red {
+        font-size: 35px;
+        margin: 10px 90px;
+    }
+
+
+    .premium_desc {
+        font-size: 45px;
+    }
+
+    .phone_text {
+        flex-direction: column;
+        margin-top: 70px;
+        
+    }
+
+    .phone_text article {
+        width: 80%;
+    }
+
+    .phone_text article h3 {
+        font-size: 50px;
+        line-height: 50px;
+    }
+
+    .phone_text p {
+        font-size: 35px;
+        line-height: 45px;
+        margin-top: 15px;
+    }
+
+    .phone img {
+        display: none;
+    }
+
+    .container h2 {
+        margin-left: 0px;
+        font-size: 60px;
+    }
+
+    .phone {
+        padding: 35px 0 50px 0;
+    }
+
+    .icons .container_ic {
+        height: 250px;
+        flex-direction: column-reverse;
+        justify-content: space-around;
+        align-items: center;
+    }
+
+    .container_ic .text {
+        width: 100%;
+        display: flex;
+        align-items: center;
+    }
+
+    .container_ic .text h2 {
+        font-size: 60px;
+    }
+
+    .container_ic .text p {
+        font-size: 26px;
+        text-align: center;
+    }
+
+
+    .tarif_title h3 {
+        font-size: 65px;
+    }
+
+    .tarif_desc {
+        justify-content: center;
+        flex-direction: column;
+        align-items: center;
+    }
+
+    .tarif_info {
+        padding-top: 10px;
+    }
+
+    .gratuit , .tarif_premium , .famille  {
+        border: none;
+        width: 666px;
+        height: 1240px;
+        align-items: center;
+        margin-top: 50px;
+        margin-bottom: 50px;
+    }
+
+
+    
+
+    .gratuit_title , .gratuit_price {
+        font-size: 65px;
+    }
+
+    .gratuit_month {
+        font-size: 30px;
+    }
+
+    .tarif_desc ul {
+        padding-top: 45px;
+        font-size: 45px;
+        margin-bottom: 100px;
+    }
+
+    .greycontent img , .whitecontent img {
+        width: 50px;
+    }
+
+    .signup {
+        font-size: 50px;
+        padding: 20px 170px;
+    }
+
+    .plusinfo , .plusinfo_white {
+        font-size: 35px;
+    }
+
+    .offert_white , .offert {
+        font-size: 30px;
+    }
+
+    .more_info p {
+        display: none;
+    }
+
+    .more_info div {
+        padding: 0;
+        height: 280px;
+        flex-direction: column;
+        justify-content: center;    
+    }
+
+    .more_info h3 {
+        font-size: 55px;
+    }
+    
+    .more_info a {
+        text-align: center;
+        font-size: 30px;
+    }
+
+    .more_btn {
+        font-size: 45px;
+        margin: 30px 0px;
+        padding: 15px 130px;
+    }
+
+    .rec {
+        display: contents;
+        text-transform: uppercase;
+        color: #8e8e94;
+        font-size: 30px;
+    }
+
+    .rec img {
+        width: 35px;
+    }
+
+    .tarif_title p , .rec_down {
+        display: none;
+    }
+
+
+
 }
